--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -323,7 +323,9 @@ title: ""
   </script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      if (!document.querySelector('.page-hero')) document.body.classList.add('no-hero');
+      if (!document.querySelector('.page-hero, .hero')) {
+        document.body.classList.add('no-hero');
+      }
     });
   </script>
   <script>
