Ajuste pro de las subpáginas

--- a/entorno.njk
+++ b/entorno.njk
@@ -26,7 +26,7 @@ permalink: "/entorno/"
     </div>
 
     <figure class="figure">
-      <img src="/images/bardenas.jpg" alt="Bardenas Reales" />
+      <img src="/images/ribera-navarra.png" alt="Ribera de Navarra" />
     </figure>
   </div>
 </section>
