Correcion de typo

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -43,7 +43,7 @@ title: ""
             <span class="chev" aria-hidden="true">▾</span>
           </button>
           <div class="submenu" id="submenu-casa" role="menu" aria-labelledby="link-casa">
-            <a href="/la-casa/faq/">Dudas sobre la casa</a>
+            <a href="/la-casa/faq/">Preguntas frecuentes</a>
             <a href="/galeria/" role="menuitem">Galería</a>
             <a href="/equipamiento/" role="menuitem">Equipamiento</a>
           </div>
